--- a/alexandria/app/src/main/res/values/strings.xml
+++ b/alexandria/app/src/main/res/values/strings.xml
@@ -26,6 +26,6 @@
     <string name="share_text">A must read book: </string>
 
     <!-- About -->
-    <string name="about_text">This application gets book information from a Google API. All titles, cover images, and author information come from there.
-    The original version of this app was built by Sascha Jaschke, and a modified version is given to students in the Udacity Android Nanodegree program. </string>
+    <string name="about_text">This application gets book information such as titles, cover images, and author information and allows
+    user to create their personalized book list by either entering a book\'s ISBN or scanning a barcode.</string>
 </resources>
