--- a/Football_Scores-master/app/src/main/res/values/strings.xml
+++ b/Football_Scores-master/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="premierleague">Premier League</string>
     <string name="primeradivison">Primera Division</string>
     <string name="seriaa">Serie A</string>
+    <string name="not_known_league">Not known League Please report</string>
     <string name="matchday_text">Match day</string>
     <string name="group_stage_text">Group stages</string>
     <string name="first_knockout_round">First knockout round</string>
@@ -58,6 +59,8 @@
     <!-- MyFetchService Strings -->
     <string name="base_url">http://api.football-data.org/alpha/fixtures</string>
     <string name="query_time_frame">timeFrame</string>
+
     <string name="no_game">There are no games on this day.</string>
+
 
 </resources>
